# kissplayer

./: .drone.yml  .editorconfig  .gitignore  .hgignore  .travis.yml  CHANGELOG  CHANGELOG.txt  KISS Linux.cbp  KISS Windows.cbp  LICENSE-3RD-PARTY  Makefile.am  Makefile.old  NOTICE.txt  README.md  README.txt  clear.sh  configure.ac  makefile  makefile.linux  makefile.win  meson.build  win-release.sh
data/: Makefile.am  kissplayer.desktop.in  meson.build  meson_post_install.sh
data/icons/hicolor/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/64x64/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
img/util/: makefile  png2img.cpp
po/: LINGUAS  Makefile.am  bg.po  br.po  cs.po  de.po  el.po  es.po  es_ES.po  fr.po  it.po  kissplayer.pot  lt.po  meson.build  ms.po  nl_NL.po  pt_BR.po  pt_PT.po  tr.po  tr_TR.po  zh.po  zh_CN.po
scripts/: transifex-pull.sh  transifex-push.sh  update-icons.sh  win-release.sh
src/: configuration.cpp  configuration.h  constants.h  context.h  dao.cpp  dao.h  dir_tools.cpp  dir_tools.h  fl_browser_music.h  fl_slider_music.h  fl_tile_music.h  icon.xpm  images.cpp  images.h  kiss.rc  locale.cpp  locale.h  lyrics_fetcher.cpp  lyrics_fetcher.h  main.cpp  misc.cpp  misc.h  music.cpp  music.h  name_cod.cpp  name_cod.h  os_specific.h  playlist.cpp  playlist.h  signals.cpp  signals.h  sound.cpp  sound.h  sync.cpp  sync.h  tinycthread.h  util.cpp  util.h  window_about.cpp  window_about.h  (+8 more)
src/linux/: icon.xpm  linux_specific.cpp  linux_specific.h
src/widget/: ksp_browser.cpp  ksp_browser.h  ksp_check_button.cpp  ksp_check_button.h  ksp_menu_item.cpp  ksp_menu_item.h  ksp_slider.cpp  ksp_slider.h  ksp_tile.cpp  ksp_tile.h  ksp_volume_controller.cpp  ksp_volume_controller.h
src/win/: kiss.rc  mingw_fix.h  windows_specific.cpp  windows_specific.h
util/: png2img.cpp
